# DiozelyneAI

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  ser.py  sqlite3  test.py  utils.py
result/: mlp_classifier.model
