[tool.poetry]
name = "diozelinabot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.1.0"
pyTelegramBotAPI = "^3.8.2"
sklearn = "^0.0"
utils = "^1.0.1"
wget = "^3.2"
librosa = "^0.8.1"
peewee = "^3.14.4"
SoundFile = "^0.10.3"
PyAudio = "^0.2.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
